feat : 모자이크 1단계 UI 제작

--- a/presentation/src/main/res/layout/fragment_select_face.xml
+++ b/presentation/src/main/res/layout/fragment_select_face.xml
@@ -1,12 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="ContentDescription">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        
+        android:layout_height="match_parent"
+        tools:layout_height="250dp">
+
+        <ImageView
+            android:id="@+id/iv_initialization"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            android:src="@drawable/ic_initialization_28_28"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/tv_detected_face_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/pretendard_medium"
+            android:text="0명"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_initialization"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_initialization"
+            tools:text="5명" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_detected_face"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:orientation="horizontal"
+            android:overScrollMode="never"
+            android:paddingHorizontal="16dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@+id/tv_detect_face"
+            app:layout_constraintTop_toBottomOf="@+id/tv_detected_face_count"
+            tools:listitem="@layout/viewholder_detected_face" />
+
+        <TextView
+            android:id="@+id/tv_detect_face"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/pretendard_medium"
+            android:text="@string/detect_face_text"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@+id/sd_detect_face"
+            app:layout_constraintStart_toStartOf="@+id/tv_detected_face_count"
+            app:layout_constraintTop_toBottomOf="@+id/rv_detected_face" />
+
+        <com.google.android.material.slider.Slider
+            android:id="@+id/sd_detect_face"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:stepSize="10"
+            android:valueFrom="0"
+            android:valueTo="100"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:thumbColor="@color/MainColor"
+            app:trackColor="@color/MainColor" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
