--- a/presentation/src/main/res/drawable/ratio_button.xml
+++ b/presentation/src/main/res/drawable/ratio_button.xml
@@ -3,13 +3,13 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M12,4m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"
-      android:fillColor="#222222"/>
-  <path
-      android:pathData="M12,12m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"
-      android:fillColor="#222222"/>
-  <path
-      android:pathData="M12,20m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"
-      android:fillColor="#222222"/>
+    <path
+        android:fillColor="#222222"
+        android:pathData="M12,4m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0" />
+    <path
+        android:fillColor="#222222"
+        android:pathData="M12,12m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0" />
+    <path
+        android:fillColor="#222222"
+        android:pathData="M12,20m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0" />
 </vector>
