--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -2,10 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="Gray100">#FF666666</color>
-    <color name="Gray200">#FFA8A8A8</color>
-    <color name="Gray300">#FFEFEFEF</color>
-    <color name="Gray400">#FFF6F6F6</color>
+    <color name="gray1">#FFFFFFFF</color>
+    <color name="gray2">#FFEEEEEE</color>
+    <color name="gray3">#505050</color>
+    <color name="gray6">#333333</color>
+
     <color name="MainColor">#FFFA9A85</color>
     <color name="SubColor">#99FA9A85</color>
 
