refactor : 버튼 백그라운드 컬러 gray2 -> gray1로 수정

--- a/presentation/src/main/res/layout/fragment_detect_face.xml
+++ b/presentation/src/main/res/layout/fragment_detect_face.xml
@@ -52,7 +52,8 @@
             app:layout_constraintTop_toTopOf="@+id/tv_detected_face_count"
             app:strokeColor="@color/gray2"
             app:strokeWidth="1dp"
-            tools:text="전체 선택" />
+            tools:text="전체 선택"
+            tools:backgroundTint="@color/gray1"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_detected_face"
