feat: figma 디자인 변경사항 반영

--- a/presentation/src/main/res/layout/fragment_mosaic_face.xml
+++ b/presentation/src/main/res/layout/fragment_mosaic_face.xml
@@ -6,29 +6,24 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_refresh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="12dp"
-            android:src="@drawable/ic_refresh_24"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        tools:layout_height="250dp">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_mosaic_figure"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginEnd="30dp"
             android:src="@drawable/ic_mosaic_inactive_50"
             app:layout_constraintBottom_toTopOf="@id/tv_mosaic_figure"
             app:layout_constraintEnd_toStartOf="@id/iv_blur_figure"
-            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="@id/tv_mosaic_figure"
-            app:layout_constraintTop_toBottomOf="@id/iv_refresh"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:shapeAppearance="@style/ShapeAppearanceOverlay.MosaicImage" />
+
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_blur_figure"
@@ -36,20 +31,34 @@
             android:layout_height="50dp"
             android:layout_marginStart="30dp"
             android:src="@drawable/ic_blur_inactive_50"
+            app:layout_constraintBottom_toBottomOf="@id/iv_mosaic_figure"
             app:layout_constraintEnd_toEndOf="@id/iv_refresh"
             app:layout_constraintStart_toEndOf="@id/iv_mosaic_figure"
             app:layout_constraintTop_toTopOf="@id/iv_mosaic_figure"
             app:shapeAppearance="@style/ShapeAppearanceOverlay.MosaicImage" />
 
+
         <TextView
             android:id="@+id/tv_mosaic_figure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="16dp"
             android:fontFamily="@font/notosans_semibold"
             android:text="@string/detect_face"
             app:layout_constraintBottom_toTopOf="@id/slider_mosaic_figure"
-            app:layout_constraintStart_toStartOf="@id/slider_mosaic_figure" />
+            app:layout_constraintEnd_toStartOf="@id/iv_refresh"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toStartOf="@id/slider_mosaic_figure"
+            app:layout_constraintTop_toBottomOf="@id/iv_mosaic_figure" />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/iv_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_refresh_24"
+            app:layout_constraintBottom_toBottomOf="@id/tv_mosaic_figure"
+            app:layout_constraintEnd_toEndOf="@id/slider_mosaic_figure"
+            app:layout_constraintStart_toEndOf="@id/tv_mosaic_figure" />
 
         <com.google.android.material.slider.Slider
             android:id="@+id/slider_mosaic_figure"
@@ -57,7 +66,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="24dp"
             android:stepSize="10"
             android:value="50"
             android:valueFrom="0"
@@ -65,6 +73,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_mosaic_figure"
             app:thumbColor="@color/onSurface"
             app:tickVisible="false"
             app:trackColorActive="@color/MainColor"
