--- a/presentation/src/main/res/layout/fragment_detect_face.xml
+++ b/presentation/src/main/res/layout/fragment_detect_face.xml
@@ -39,6 +39,7 @@
             android:letterSpacing="0"
             android:minWidth="0dp"
             android:minHeight="0dp"
+            android:onClick="@{() -> vm.setOnClickAllSelectButton()}"
             android:outlineProvider="none"
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
