--- a/presentation/src/main/res/values-night-v21/colors.xml
+++ b/presentation/src/main/res/values-night-v21/colors.xml
@@ -2,12 +2,13 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="Gray100">#FF666666</color>
-    <color name="Gray200">#FFA8A8A8</color>
-    <color name="Gray300">#FFEFEFEF</color>
-    <color name="Gray400">#FFF6F6F6</color>
-    <color name="MainColor">#FFFA9A85</color>
-    <color name="SubColor">#99FA9A85</color>
+    <color name="gray1">#1E1E1E</color>
+    <color name="gray2">#333333</color>
+    <color name="gray3">#505050</color>
+    <color name="gray6">#ECECEC</color>
+
+    <color name="MainColor">#EFFF04</color>
+    <color name="SubColor">#0884FE</color>
 
     <!-- System Theme Color -->
     <color name="WindowBackGroundColor">#121212</color>
