--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
 
     <color name="MainColor">#FFFA9A85</color>
     <color name="SubColor">#99FA9A85</color>
-    <color name="Surface">@color/Gray300</color>
+    <color name="Surface">@color/gray3</color>
     <color name="onSurface">@color/black</color>
     <color name="transparent">#00000000</color>
 
